Improved concurrency by implementing a lock-free algorithm for data appending.